newclay/test/Compiler/StaticEvaluator/Fail/AliasPatternUnboundParameter1/main.clay
define Foo['A];

alias Bar['B, 'X] = Foo['B];

#foo(Bar['B, 'X]) = 'X;

#Main() = ..foo(Foo[1]);
